--- a/weatherapp/index.html
+++ b/weatherapp/index.html
@@ -11,12 +11,12 @@
             <h1 id="cityHeader"></h1>
             <div id="weatherMain">
                 <div id="temperature"></div>
-                <div id="weatherDescription"></div>
-                <div><img id="doucumentIconImg"></div>
+                <div id="weatherDescriptionHeader"></div>
+                <div><img id="documentIconImg"></div>
             </div>
             <hr>
             <div id="windSpeed" class="bottomDetails"></div>
-            <div id="humudity" class="bottomDetails"></div>
+            <div id="humidity" class="bottomDetails"></div>
         </div>
         <script src="script.js"></script>
     </body>
